--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+
 # Created by https://www.gitignore.io/api/macos,windows,netbeans
 
 ### macOS ###
 *.DS_Store
 .AppleDouble
 .LSOverride
+
+# Icon must end with two \r
+Icon
 
 # Thumbnails
 ._*
@@ -26,7 +30,9 @@ Temporary Items
 
 ### NetBeans ###
 nbproject/private/
+build/
 nbbuild/
+dist/
 nbdist/
 .nb-gradle/
 
